--- a/app.json
+++ b/app.json
@@ -3,5 +3,5 @@
   "descriptipn": "whatsapp bot build with node js",
   "repository": "https://github.com/DGXeon/Xeon-Self-BOT.git",
   "logo": "https://h.top4top.io/p_2086ieoc20.png",
-  "keywords": ["nodejs", "bot", "whatsapp bot"]
+  "keywords": ["nodejs", "bot", "whatsapp bot"],
 }
