--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
-  "name": "xeon-self-bot",
-  "descriptipn": "whatsapp bot build with node js",
+  "name": "whatsapp-bot",
+  "description": "Automated whatsapp bot",
   "repository": "https://github.com/DGXeon/Xeon-Self-BOT.git",
   "logo": "https://h.top4top.io/p_2086ieoc20.png",
-  "keywords": ["nodejs", "bot", "whatsapp bot"]
+  "keywords": ["npm", "whatsapp bot", "xeon"]
 }
