--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "name": "whatsapp-bot",
   "description": "Automated whatsapp bot",
-  "repository": "https://github.com/DGXeon/Xeon-Self-BOT.git",
+  "repository": "https://github.com/DGXeon/Xeon-Self-BOT",
   "logo": "https://h.top4top.io/p_2086ieoc20.png",
   "keywords": ["npm", "whatsapp bot", "xeon"]
 }
